# Show-Timer

./: .gitignore  COLLABORATION.md  DESIGN.md  OVERVIEW.md  generate-icons.mjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: launch.json  settings.local.json
.github/workflows/: build-mac.yml  release.yml
docs/: V2_PLAN.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dev.rs  lib.rs  main.rs  session.rs
src/components/: ActiveSegmentPanel.tsx  AppLogo.tsx  Clock.tsx  DevPanel.tsx  HistoryView.tsx  PeoplePanel.tsx  ReportPanel.tsx  ReportTab.tsx  RunSetupModal.tsx  SegmentCard.tsx  SessionButton.tsx  SessionPanel.tsx  SettingsView.tsx  ShowSetupModal.tsx  SignaturePad.tsx  TimeEditModal.tsx  TimePicker.tsx  TimerView.tsx  TimestampModal.tsx  ToastContainer.tsx
src/hooks/: useClock.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: devSeed.ts  exchange.ts  notifications.ts  pdf.ts  report.ts  reportFonts.ts  reportLogos.ts  schedule.ts  showReportPdf.ts  time.ts
