[package]
name = "show-timer"
version = "0.1.0"
description = "Professional Show Timer for Theatre"
authors = []
edition = "2021"

[lib]
name = "show_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "time", "io-util", "macros"] }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", features = ["sink"] }
uuid = { version = "1", features = ["v4"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
